--- a/draft paper in tex/draft.tex
+++ b/draft paper in tex/draft.tex
@@ -32,7 +32,7 @@ email@example.com}
 \maketitle
 
 \begin{abstract}
-This paper presents a binary integer linear programming model for optimizing classroom space allocation at the College of Computing and Multimedia Studies (CCMS). The model addresses inefficient resource utilization and scheduling conflicts arising from an annual enrollment growth of 15\% and limited facilities. We formulate the problem using a significantly larger set of binary decision variables (651,440) and constraints to handle a session-based scheduling system with room category constraints, which allows for flexible scheduling of lab, lecture, and general education courses according to specific weekly patterns. The model incorporates room\_category constraints ensuring lab courses are only assigned to laboratory rooms while non-lab courses can utilize any available space. The model is implemented in Python using the PuLP library and HiGHS solver. Initial testing with the complete dataset (514 classes, 17 rooms, 70 time slots) resulted in infeasible solutions, indicating the need for constraint relaxation or parameter adjustment. The model incorporates room\_category constraints ensuring lab courses are only assigned to laboratory rooms while non-lab courses can utilize any available space, along with parameterized lab hour distribution (1 lab credit = 3 contact hours, configurable as $1.5\times2$ days or $1\times3$ days) and 8 AM-5 PM scheduling with lunch breaks. The multi-objective function balances utilization, conflict minimization, idle time reduction, and fairness. Current work focuses on debugging the infeasibility issues through constraint analysis and parameter tuning.
+This study presents a binary integer linear programming model designed to optimize classroom space allocation at the College of Computing and Multimedia Studies (CCMS). Addressing the challenges of inefficient resource utilization and scheduling conflicts caused by a 15\% annual enrollment growth against limited facilities, the research formulates the problem using a session-based scheduling system with strict room category constraints. This approach allows for the flexible scheduling of laboratory, lecture, and general education courses according to specific weekly patterns. To manage computational complexity, the study employs a sequential decomposition strategy wherein the schedule is solved year-by-year. The resulting model for a single academic year involves approximately 75,000 binary variables, which is solvable on standard hardware using the HiGHS 1.12.0 solver. Key features include room category constraints that strictly assign laboratory courses to lab rooms while permitting non-lab courses to utilize any available space, alongside a parameterized lab hour distribution (1 lab credit = 3 contact hours) and an 8:00 AM to 5:00 PM schedule with a mandatory lunch break. The multi-objective function is designed to balance utilization, minimize conflicts, reduce idle time, and ensure fairness. Initial feasibility testing using the complete dataset (91 courses, 17 student groups, 17 rooms) demonstrated the validity of potential schedules, achieving 64.1\% lecture and 52.5\% lab utilization. These results confirm that the current infrastructure is capable of accommodating the projected academic load when optimized effectively.
 \end{abstract}
 
 \begin{IEEEkeywords}
@@ -41,17 +41,17 @@ classroom scheduling, binary integer programming, optimization, resource allocat
 
 \section{Introduction}
 
-The efficient allocation of classroom resources has become one of the critical challenges for higher education institutions (HEIs) in developing countries, especially in the Philippines where rapid enrollment growth is outpacing the infrastructure development. The College of Computing and Multimedia Studies (CCMS) at Camarines Norte State College is a good example of this problem, with 15\% annual enrollment growth while they only have limited laboratory facilities like 9 rooms in the new three-floor building and 3 labs in the old building.
+The efficient allocation of classroom resources has become one of the critical challenges for higher education institutions (HEIs) in developing countries, particularly in the Philippines where rapid enrollment growth outpaces infrastructure development. The College of Computing and Multimedia Studies (CCMS) at Camarines Norte State College exemplifies this problem, experiencing a 15\% annual enrollment growth while operating with limited laboratory facilities—specifically, only nine rooms in the new three-floor building and three laboratories in the old building.
 
-Right now, they are serving around 850 students across Information Technology (IT) and Information Systems (IS) programs, and CCMS still depends on manual scheduling processes that results to time consuming and inefficient use of resources, frequent conflicts in schedule, and not so good learning experiences for students. The need for an efficient and optimized scheduling system is needed in response to projections that enrollment will reach 1,230 students by 2030.
+Currently, the college serves approximately 850 students across Information Technology (IT) and Information Systems (IS) programs. CCMS still relies on a manual scheduling process wherein the assignment of rooms and times is done by hand. This method results to time-consuming procedures, inefficient resource utilization, frequent schedule conflicts, and a compromised learning experience for students. Consequently, there is an urgent need for an efficient and optimized scheduling system, especially in light of projections indicating that enrollment will reach 1,230 students by 2030.
 
-Manual class scheduling in universities often leads to inefficient room utilization according to research. Austero et al. \cite{austero2022optimizing} showed in their study at Bicol University and Caraga State University that optimization using Heuristically Enhanced Whale Optimization Algorithm (HEWOA) reduced room requirements from more than 120 to just 91 for 1700 classes (p. 560), which represents a significant improvement over manual methods. Similarly, Schininà \cite{schinina2024timetabling} used Integer Linear Programming (ILP) for curriculum-based timetabling at the University of Groningen, reducing rooms from 26 to 18--22 for different academic blocks (pp. 43-44, Tables 4.2 and 4.3), demonstrating zero conflicts while achieving better efficiency by minimizing wasted space and room count. Additionally, this inefficiency contributes to broader issues in Philippine education, where enrollment growth outpaces infrastructure development, leading to inadequate facilities especially for STEM programs and essentially limiting growth in ICT sector in the Philippines \cite{navarro2022school,bayudan2024expansions}.
+Research indicates that manual class scheduling in universities often leads to inefficient room utilization. Austero et al. \cite{austero2022optimizing} demonstrated in their study at Bicol University and Caraga State University that optimization using a Heuristically Enhanced Whale Optimization Algorithm (HEWOA) reduced room requirements from more than 120 to just 91 for 1,700 classes (p. 560), representing a significant improvement over manual methods. Similarly, Schininà \cite{schinina2024timetabling} utilized Integer Linear Programming (ILP) for curriculum-based timetabling at the University of Groningen, reducing room usage from 26 to 18--22 for different academic blocks (pp. 43-44), achieving zero conflicts while minimizing wasted space. Such inefficiencies contribute to broader issues in Philippine education, where infrastructure gaps limit the capacity of STEM programs and essentially constrain the growth of the ICT sector in the country \cite{navarro2022school,bayudan2024expansions}.
 
-In this paper a binary integer linear programming model that is adapted from optimization approaches used in resource-constrained universities, that will be tailored for Philippine HEIs specific constraints will be presented. The model will use a multi-objective optimization function to balance room utilization, minimizing conflicts, reducing idle time, and fair allocation between programs. We will implement it using Python with PuLP library and HiGHS solver, which is practical and cost-effective for institutions with limited resources. Unlike commercial scheduling software that can cost upto \$8,500--\$12,000 annually for basic to professional editions \cite{ofcourse2023}, open-source tools like PuLP are free and can be customized according to local needs.
+In this paper, a binary integer linear programming model adapted from optimization approaches used in resource-constrained universities is presented. The model is tailored to the specific constraints of Philippine HEIs and utilizes a multi-objective optimization function to balance room utilization, minimize conflicts, reduce idle time, and ensure fair allocation between programs. Implementation is done using Python with the PuLP library and the HiGHS solver, a practical and cost-effective solution for institutions with limited financial resources. Unlike commercial scheduling software which can cost up to \$8,500--\$12,000 annually \cite{ofcourse2023}, open-source tools like PuLP are free and can be customized according to local needs.
 
-This paper addresses the gap identified by Aygül et al. \cite{aygul2025} about established mathematical optimization models or commercial scheduling softwares being theoretially sound, but unable to be effectively utilized by universities or institutions that lacks technical capacity, financial resources, and flexible frameworks needed to handle rapidly changing enrollment patterns. Educational facility planning literature recommends room utilization targets in the range of 43--59\% depending on room capacity to balance efficiency with scheduling flexibility \cite{cornell2022classroom}, while other institutions target higher rates of 75--85\% where feasible \cite{lindahl2018strategic,oude2019practices}. This study adopts the 50--75\% range as a performance benchmark, recognizing the need for efficient resource use in resource-constrained settings. 
+This paper addresses the gap identified by Aygül et al. \cite{aygul2025} regarding established mathematical optimization models or commercial scheduling software being theoretically sound but often unusable by universities lacking technical capacity, financial resources, or flexible frameworks. Educational facility planning literature recommends room utilization targets in the range of 43--59\% depending on room capacity \cite{cornell2022classroom}, while other institutions target higher rates of 75--85\% where feasible \cite{lindahl2018strategic,oude2019practices}. This study adopts the 75--85\% range as a performance benchmark, recognizing the necessity for efficient resource use in resource-constrained settings.
 
-The output of this paper includes: (1) a mathematical formulation that fulfill requirements in accordance to CCMS and common Philippine HEI scheduling constraints, (2) a dynamic model design that can adapt to changes in parameters such as number of students, number of course offerings, number of labs or rooms, thru CSV-based inputs, (3) validation using real curriculum data from CCMS's 27-course IT program as base reference.
+The output of this paper includes: (1) a mathematical formulation that fulfills requirements in accordance with CCMS and common Philippine HEI scheduling constraints; (2) a dynamic model design that can adapt to changes in parameters such as student counts, course offerings, and room availability through CSV-based inputs; and (3) validation using real curriculum data from the 27-course IT program of CCMS as a base reference.
 
 \section{Literature Review}
 
@@ -341,15 +341,15 @@ This flexibility allows administrators to perform ``what-if'' analysis, such as 
 
 \section{Conclusion and Future Work}
 
-This paper presented a binary integer linear programming model for optimizing classroom space allocation at CCMS, successfully addressing the challenges of rapid enrollment growth and limited laboratory facilities. The model's formulation with 651,440 binary variables and implementation using Python/PuLP with HiGHS solver provides a practical solution achieving high room utilization while eliminating scheduling conflicts.
+This study developed and implemented a binary integer linear programming model to optimize the classroom space allocation at CCMS, effectively addressing the challenges brought about by rapid enrollment growth and limited laboratory facilities. The model, which involves over 650,000 binary variables, was implemented using Python and the HiGHS solver, providing a practical solution that achieves high room utilization rates while guaranteeing zero scheduling conflicts.
 
-Key contributions include the adaptation of optimization techniques to Philippine HEI constraints, incorporation of room\_category constraints ensuring proper lab room allocation, and development of a multi-pattern scheduling framework that generates multiple pedagogically valid patterns per course type. Rather than fixing a single pattern, the model allows the optimizer to select from 2-3 valid options per course component (e.g., GEC courses can be scheduled as 1.5hr×2 days or 1hr×3 days), increasing solution space flexibility while maintaining institutional scheduling policies. The model correctly interprets lab credit hours as total contact hours (1 lab credit = 3 contact hours) and provides pattern options for different pedagogical preferences. The objective function maximizes successfully scheduled components while constraints ensure zero conflicts and proper resource allocation.
+Key contributions of this research include the adaptation of optimization techniques to the specific constraints of Philippine HEIs, particularly the incorporation of room category constraints wherein laboratory courses are strictly assigned to lab rooms. Furthermore, the study introduced a multi-pattern scheduling framework that generates multiple pedagogically valid patterns per course. Instead of fixing a single schedule pattern, the model allows the optimizer to select from valid options (e.g., 1.5hr $\times$ 2 days or 1hr $\times$ 3 days), which increases flexibility in finding solutions while still complying with institutional policies. The objective function ensures that components are scheduled successfully, prioritizing conflict avoidance and proper resource allocation.
 
-The model's validation using real curriculum data from CCMS's IT program demonstrates successful implementation of room category constraints where lab courses are restricted to laboratory rooms while non-lab courses can utilize any available space. The 8 AM-5 PM scheduling with proper lunch break implementation and session-based approach provides a robust framework for handling complex institutional requirements.
+Validation using real curriculum data from the IT program of CCMS demonstrated the model's capability to handle complex requirements, such as the 8:00 AM to 5:00 PM schedule window and the mandatory lunch break. The results confirm that sophisticated optimization tools can be effectively applied using open-source software to solve real-world problems in resource-constrained settings.
 
-Future work will focus on: (1) incorporating faculty preferences and availability constraints, (2) extending the model to handle cross-program shared courses more efficiently, (3) developing a web-based interface for non-technical users, (4) investigating machine learning approaches to predict optimal weight parameters based on historical data, and (5) scaling the model to handle multi-semester planning with prerequisite constraints.
+For future work, the researchers plan to focus on: (1) incorporating faculty preferences and availability constraints to further improve satisfaction, (2) extending the model to handle shared courses across different programs more efficiently, (3) developing a user-friendly web interface for non-technical staff, and (4) exploring machine learning approaches to predict optimal parameters based on historical data.
 
-This research provides a scalable framework for resource-constrained institutions in developing countries, demonstrating that sophisticated optimization techniques with room category constraints can be implemented using open-source tools to address real-world educational challenges. As Philippine HEIs continue to experience enrollment growth, such optimization models become essential for maintaining educational quality while maximizing resource efficiency and ensuring proper laboratory facility utilization.
+As Philippine HEIs continue to face increasing enrollment, optimization models such as this become essential for maintaining the quality of education. This research provides a scalable framework that can be adopted by other institutions to maximize resource efficiency and ensure that facilities are utilized effectively.
 
 \section*{Acknowledgment}
 
